--- a/html5up-spectral/index.html
+++ b/html5up-spectral/index.html
@@ -41,12 +41,12 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Patrick Schwindt</h2>
+							<p>Full-Stack Web Developer<br />
+								Lambda Student<br />
+							
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="#" class="button primary">Download Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
