--- a/html5up-spectral/index.html
+++ b/html5up-spectral/index.html
@@ -145,7 +145,7 @@
 		<section id="cta" class="wrapper style4">
 			<div class="inner">
 				<header>
-					<h2>Arcue ut vel commodo</h2>
+					<h2>AErcue ut vel commodo</h2>
 					<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 				</header>
 				<ul class="actions stacked">
